--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ body,html{
 .whiteborderblock{
     border-radius: 4px;
     background: white;
-    box-shadow: 0px 2px 2px 1px darkgray;
+    box-shadow: 1px 1px 1px 2px #DADADA;
 }
 .borderblock{
     border-radius: 4px;
@@ -36,9 +36,15 @@ body,html{
     padding: 4px 4px;
 }
 
+.rad{
+    padding: 4px 4px;
+    border-radius: 4px;
+}
+
 .box{
     padding: 4px 4px;
     border: #DADADA 1px solid;
+    border-radius: 4px;
 }
 
 .bantai{
@@ -49,8 +55,26 @@ body,html{
 }
 .paidui{
     padding: 6px 6px;
-    border: #DADADA 1px solid;
     color: #4A4A4A;
     font-size: 16px;
-
+    border-radius: 4px;
+    border: #DADADA 1px solid;
+}
+.fafafa{
+    color: #4A4A4A;
+}
+.nbnbnb{
+    color: #9B9B9B;
+}
+.white{
+    color: white;
+}
+.cominfo{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-55%);
+    padding-left: 10px
+}
+.curpoint{
+    cursor: pointer
 }
