--- a/css/index.css
+++ b/css/index.css
@@ -15,8 +15,8 @@ body,html{
 .leftrightmarging{
     width: auto;
     height: 100%;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 .whiteborderblock{
     border-radius: 4px;
@@ -77,4 +77,7 @@ body,html{
 }
 .curpoint{
     cursor: pointer
+}
+.griddisplay{
+    display: grid;
 }
